--- a/package.json
+++ b/package.json
@@ -17,14 +17,10 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "build:tailwind": "tailwind build src/tailwind.css -o src/tailwind.output.css",
-    "watch:tailwind": "chokidar 'src/**/*.css' 'src/**/*.scss' --ignore src/tailwind.output.css -c 'npm run build:tailwind'",
-  
-    "start": "npm-run-all build:tailwind --parallel watch:tailwind start:react",
+    "build:tailwind": "tailwind build src/utils/tailwind/tailwind.css -o src/assets/css/tailwind.output.css",
+    "start": "npm-run-all build:tailwind --parallel start:react",
     "start:react": "react-scripts start",
-  
     "prebuild": "run-s build:tailwind",
-  
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "postcss": "^8.2.4"
   }
 }
